@@ -21,6 +21,12 @@
 
 - HIP Kernels: Got rid of hip/hip_runtime.h dependancy to enable more easy integration of the HIP backend on Windows
 
+##
+## Algorithms
+##
+
+- Added hash-mode: SNMPv3 HMAC-MD5-96
+
 * changes v6.2.2 -> v6.2.3
 
 ##
